fix: change jump-return-button-container position to fixed and adjust z-index

--- a/src/containers/pageWidget/pageWidget.css
+++ b/src/containers/pageWidget/pageWidget.css
@@ -140,11 +140,11 @@
   z-index: 1;
 }
 .jump-return-button-container {
-  position: absolute;
+  position: fixed;
   bottom: 45px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 100;
+  z-index: 10;
   pointer-events: all;
 }
 .jump-return-button {
